Changed player mesh

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -143,7 +143,9 @@ LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
+OpenAssetsAtExit=/Game/Lennon/Character/ShipWithShield.ShipWithShield
+OpenAssetsAtExit=/Game/Lennon/Character/Shield.Shield
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
@@ -866,26 +868,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerCharacter
-MRUItem1=/Game/Character/RedShip
-MRUItem2=/Game/Enemy/Enemy
-MRUItem3=/Game/Enemy/Drone
-MRUItem4=/Game/GameJamGamemode
-MRUItem5=/Game/MainMenu
-MRUItem6=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem7=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
-MRUItem8=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem9=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem10=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem11=/Game/StarterContent/Particles/P_Fire
-MRUItem12=/Game/StarterContent/Particles/P_Smoke
-MRUItem13=/Game/Missile
-MRUItem14=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem15=/Game/HUD
-MRUItem16=/Game/StarterContent/Particles/P_Sparks
-MRUItem17=/Game/Blueprints/NewPawn
-MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem19=/Game/Arena_obj
+MRUItem0=/Game/StarterContent/Materials/M_Tech_Hex_Tile
+MRUItem1=/Game/Lennon/Character/Shield
+MRUItem2=/Game/Lennon/Character/ShipWithShield
+MRUItem3=/Game/PlayerCharacter
+MRUItem4=/Game/Character/RedShip
+MRUItem5=/Game/Enemy/Enemy
+MRUItem6=/Game/Enemy/Drone
+MRUItem7=/Game/GameJamGamemode
+MRUItem8=/Game/MainMenu
+MRUItem9=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem10=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem11=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem12=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem13=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem14=/Game/StarterContent/Particles/P_Fire
+MRUItem15=/Game/StarterContent/Particles/P_Smoke
+MRUItem16=/Game/Missile
+MRUItem17=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem18=/Game/HUD
+MRUItem19=/Game/StarterContent/Particles/P_Sparks
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1580,6 +1582,38 @@ REINST_PlayerCharacter_C_39.Rendering=True
 REINST_PlayerCharacter_C_39.Replication=True
 REINST_PlayerCharacter_C_39.Input=True
 REINST_PlayerCharacter_C_39.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
+MaterialExpressionBumpOffset.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=1
@@ -1699,7 +1733,7 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object=
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -1747,6 +1781,9 @@ ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Objec
 REINST_PlayerCharacter_C_70="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_78="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_39="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+PreviewMaterial="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+Material="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
