--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -868,26 +868,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Materials/M_Tech_Hex_Tile
-MRUItem1=/Game/Lennon/Character/Shield
-MRUItem2=/Game/Lennon/Character/ShipWithShield
-MRUItem3=/Game/PlayerCharacter
-MRUItem4=/Game/Character/RedShip
-MRUItem5=/Game/Enemy/Enemy
-MRUItem6=/Game/Enemy/Drone
-MRUItem7=/Game/GameJamGamemode
-MRUItem8=/Game/MainMenu
-MRUItem9=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem10=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
-MRUItem11=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem12=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem13=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem14=/Game/StarterContent/Particles/P_Fire
-MRUItem15=/Game/StarterContent/Particles/P_Smoke
-MRUItem16=/Game/Missile
-MRUItem17=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem18=/Game/HUD
-MRUItem19=/Game/StarterContent/Particles/P_Sparks
+MRUItem0=/Game/PlayerCharacter
+MRUItem1=/Game/Lennon/Character/Dissolve
+MRUItem2=/Game/StarterContent/Materials/M_Tech_Hex_Tile
+MRUItem3=/Game/Lennon/Character/Shield
+MRUItem4=/Game/Lennon/Character/ShipWithShield
+MRUItem5=/Game/Character/RedShip
+MRUItem6=/Game/Enemy/Enemy
+MRUItem7=/Game/Enemy/Drone
+MRUItem8=/Game/GameJamGamemode
+MRUItem9=/Game/MainMenu
+MRUItem10=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem11=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem12=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem13=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem14=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem15=/Game/StarterContent/Particles/P_Fire
+MRUItem16=/Game/StarterContent/Particles/P_Smoke
+MRUItem17=/Game/Missile
+MRUItem18=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem19=/Game/HUD
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1604,7 +1604,7 @@ MaterialExpressionVectorParameter.General=True
 MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
-MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpression=False
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
@@ -1614,6 +1614,24 @@ MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
 MaterialExpressionBumpOffset.MaterialExpression=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionFresnel.MaterialExpressionFresnel=True
+MaterialExpressionFresnel.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionDepthFade.MaterialExpressionDepthFade=True
+MaterialExpressionDepthFade.MaterialExpression=True
+MaterialExpressionMax.MaterialExpressionMax=True
+MaterialExpressionMax.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=1
@@ -1630,8 +1648,11 @@ MaterialExpressionConstant3Vector.MaterialExpression=True
 /Game/Arena_obj.Arena_obj=1
 /Game/PlayerCharacter.PlayerCharacter=1
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Lennon/Character/Dissolve.Dissolve=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Lennon/Character/Shield.Shield;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Missile.Missile;
 RecentlyPlaced=/Game/PlayerCharacter.PlayerCharacter;
 RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
@@ -1650,7 +1671,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Ston
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Hasiel/Maya_Map.Maya_Map;
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1784,6 +1804,11 @@ REINST_PlayerCharacter_C_39="\"Object.Character.CharacterMovement.Object.Charact
 PreviewMaterial="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" "
+MaterialExpression=
+MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1870,5 +1895,51 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
