--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Lennon/Character
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -142,13 +142,13 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Lennon/Character/ShipWithShield.ShipWithShield
 OpenAssetsAtExit=/Game/Lennon/Character/Shield.Shield
 OpenAssetsAtExit=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=220.000
+ScreenPosition=X=369.000 Y=265.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -166,7 +166,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/v8091856/Desktop/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
+UNR=../../../../../../Users/v8060236/Desktop/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
 BRUSH=D:/UnrealProjects/MyProject2/Content/
 FBX=D:/UnrealProjects/MyProject2/Content/
 FBXAnim=D:/UnrealProjects/MyProject2/Content/
@@ -1801,9 +1801,9 @@ ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Objec
 REINST_PlayerCharacter_C_70="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_78="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_39="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-PreviewMaterial="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
-Material="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
-MaterialInterface="\"Object.Group Sorting.ParameterGroupData\" \"Object.Group Sorting.ParameterGroupData.ParameterGroupData[0]\" \"Object.Lightmass.LightmassSettings\" "
+PreviewMaterial=
+Material=
+MaterialInterface=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
