Added new level asset, added little barrier, increased player speed slightly

--- a/Example project/Saved/Config/Windows/Engine.ini
+++ b/Example project/Saved/Config/Windows/Engine.ini
@@ -34,4 +34,26 @@ JavaPath=(Path="")
 [MagicLeapSettings]
 WindowMirrorMode=1
 
+[Oculus.Settings]
+GraphicsAdapter=0
+AudioInputDevice="{0.0.1.00000000}.{7992d242-21b6-4088-8c1c-bf36984170ed}"
+AudioOutputDevice="{0.0.0.00000000}.{d2c57aab-c827-4e80-95d9-7f382fb06454}"
+bChromaAbCorrectionEnabled=True
+PixelDensityMin=0.500000
+PixelDensityMax=1.000000
+bHQBuffer=False
+bHQDistortion=False
+bUpdateOnRT=True
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
 
