Changed shield material

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -85,7 +85,7 @@ LastExecutedLaunchName=TU46936
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=635,Y=323)
+NewWindowPosition=(X=2235,Y=203)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -145,8 +145,11 @@ LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Lennon/Character/Shield.Shield
+OpenAssetsAtExit=/Game/Lennon/Character/ShipWithShield.ShipWithShield
+OpenAssetsAtExit=/Game/Lennon/Character/Shield_Inst.Shield_Inst
 OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Arena_obj.Arena_obj
+OpenAssetsAtExit=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse
 
 [RootWindow]
 ScreenPosition=X=369.000 Y=265.000
@@ -869,26 +872,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Shapes/Shape_Trim
-MRUItem1=/Game/Ethan/FakeAds/StaticMesh
-MRUItem2=/Game/Ethan/FakeAds/RecycleElderly_MAT
-MRUItem3=/Game/Hasiel/Container002
-MRUItem4=/Game/Geometry/Meshes/TemplateFloor
-MRUItem5=/Game/Arena_obj
-MRUItem6=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem7=/Game/PlayerCharacter
-MRUItem8=/Game/spherecollider
-MRUItem9=/Game/NewBlueprint
-MRUItem10=/Game/Missile
-MRUItem11=/Game/Lennon/Enemy/Enemy
-MRUItem12=/Game/Lennon/Enemy/AI
-MRUItem13=/Game/Hasiel/Maya_Map
-MRUItem14=/Game/Prototype/Arena
-MRUItem15=/Game/MainMenu
-MRUItem16=/Game/FlyingExampleMap
-MRUItem17=/Game/Lennon/Enemy/enemyAI
-MRUItem18=/Game/Lennon/Enemy/Drone
-MRUItem19=/Game/Lennon/Enemy/enemycharacter
+MRUItem0=/Game/PlayerCharacter
+MRUItem1=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse
+MRUItem2=/Game/Lennon/Character/Dissolve
+MRUItem3=/Game/Lennon/Character/Shield_Inst
+MRUItem4=/Game/Lennon/Character/ShipWithShield
+MRUItem5=/Game/Lennon/Character/Shield
+MRUItem6=/Game/StarterContent/Shapes/Shape_Trim
+MRUItem7=/Game/Ethan/FakeAds/StaticMesh
+MRUItem8=/Game/Ethan/FakeAds/RecycleElderly_MAT
+MRUItem9=/Game/Hasiel/Container002
+MRUItem10=/Game/Geometry/Meshes/TemplateFloor
+MRUItem11=/Game/Arena_obj
+MRUItem12=/Game/Lennon/Enemy/ENEMY_AI
+MRUItem13=/Game/spherecollider
+MRUItem14=/Game/NewBlueprint
+MRUItem15=/Game/Missile
+MRUItem16=/Game/Lennon/Enemy/Enemy
+MRUItem17=/Game/Lennon/Enemy/AI
+MRUItem18=/Game/Hasiel/Maya_Map
+MRUItem19=/Game/Prototype/Arena
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1621,7 +1624,7 @@ MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
 MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
-MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.MaterialExpression=False
 MaterialExpressionFresnel.MaterialExpressionFresnel=True
 MaterialExpressionFresnel.MaterialExpression=True
 MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
@@ -2357,6 +2360,24 @@ SpotLight.DistanceFieldShadows=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_Timeline.GraphNodeDetail=True
+StaticMesh.Thumbnail=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=0
@@ -2490,10 +2511,15 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 enemycharacter_C=enemycharacter_C.Physics.ConstraintsGroup,enemycharacter_C.Rendering.TextureStreaming,enemycharacter_C.Rendering.LOD,
 ENEMY_AI_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 K2Node_VariableGet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+PlayerCharacter_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,
+K2Node_VariableSet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,
+StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.Collision.Collision,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object="\"Object.ImportSettings.AssetImportData\" "
+Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -2515,9 +2541,9 @@ SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.LightComponent.Object.Light.LightColor\" "
-PlayerCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PlayerCharacter_C=
+Character=
+Pawn=
 REINST_PlayerCharacter_C_136="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_144="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_152="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2546,7 +2572,7 @@ Material=
 MaterialInterface=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.Constant\" "
+MaterialExpression="\"Object.DefaultValue\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2579,10 +2605,11 @@ REINST_PlayerCharacter_C_51="\"Object.Character.Mesh.Object.Collision.BodyInstan
 REINST_ENEMY_AI_C_59="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_ENEMY_AI_C_65="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_ENEMY_AI_C_85="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMesh="\"Object.ImportSettings.AssetImportData\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
 PointLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SpotLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2723,5 +2750,8 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
 
