added continue screen

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,7 @@ PreviewShaderPlatformName=None
 bIsMaterialQualityOverridePlatform=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=315,Y=203)
+NewWindowPosition=(X=2235,Y=203)
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -64,7 +64,7 @@ bBindSequencerToSimulate=True
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -145,7 +145,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=327.000
@@ -880,26 +881,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerCharacter
-MRUItem1=/Game/Ethan/BPs/Ramp
-MRUItem2=/Game/Ethan/BPs/Pyramid
-MRUItem3=/Game/Ethan/BPs/Arch
-MRUItem4=/Game/Ethan/BPs/Pyramid_Destruct
-MRUItem5=/Game/StarterContent/Shapes/Shape_TriPyramid
-MRUItem6=/Game/StarterContent/Shapes/Shape_Wedge_B_DM
-MRUItem7=/Game/StarterContent/Shapes/Shape_Pipe_180_DM
-MRUItem8=/Game/StarterContent/Shapes/Shape_TriPyramid_DM
-MRUItem9=/Game/Arena_obj
-MRUItem10=/Game/Lennon/Enemy/Drone_DM
-MRUItem11=/Game/Lennon/Enemy/Drone
-MRUItem12=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem13=/Game/Ethan/BPs/ObstacleSpawner
-MRUItem14=/Game/MainMenu
-MRUItem15=/Game/Ramp_3
-MRUItem16=/Game/Ramp_2
-MRUItem17=/Game/Prototype/Arena
-MRUItem18=/Game/Ramp
-MRUItem19=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem0=/Game/Scot/Scotts_UI/Menus/Continue_WG
+MRUItem1=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem2=/Game/PlayerCharacter
+MRUItem3=/Game/HUD
+MRUItem4=/Game/Ethan/BPs/Ramp
+MRUItem5=/Game/Ethan/BPs/Pyramid
+MRUItem6=/Game/Ethan/BPs/Arch
+MRUItem7=/Game/Ethan/BPs/Pyramid_Destruct
+MRUItem8=/Game/StarterContent/Shapes/Shape_TriPyramid
+MRUItem9=/Game/StarterContent/Shapes/Shape_Wedge_B_DM
+MRUItem10=/Game/StarterContent/Shapes/Shape_Pipe_180_DM
+MRUItem11=/Game/StarterContent/Shapes/Shape_TriPyramid_DM
+MRUItem12=/Game/Arena_obj
+MRUItem13=/Game/Lennon/Enemy/Drone_DM
+MRUItem14=/Game/Lennon/Enemy/Drone
+MRUItem15=/Game/Lennon/Enemy/ENEMY_AI
+MRUItem16=/Game/Ethan/BPs/ObstacleSpawner
+MRUItem17=/Game/MainMenu
+MRUItem18=/Game/Ramp_3
+MRUItem19=/Game/Ramp_2
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -2768,6 +2769,23 @@ REINST_PlayerCharacter_C_869.ComponentReplication=True
 REINST_PlayerCharacter_C_869.Activation=True
 REINST_PlayerCharacter_C_869.Cooking=True
 REINST_PlayerCharacter_C_869.Events=True
+Continue_WG_C.Appearance=True
+Continue_WG_C.Designer=True
+Continue_WG_C.Input=True
+Continue_WG_C.Interaction=True
+Continue_WG_C.Performance=True
+Continue_WG_C.Layout=True
+Continue_WG_C.Behavior=True
+Continue_WG_C.Render Transform=True
+Continue_WG_C.Clipping=True
+Continue_WG_C.Navigation=True
+Continue_WG_C.Default=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=0
@@ -2807,6 +2825,7 @@ REINST_PlayerCharacter_C_869.Events=True
 /Game/Ethan/BPs/Arch.Arch=1
 /Game/Ethan/BPs/Pyramid.Pyramid=1
 /Game/Ethan/BPs/Ramp.Ramp=1
+/Game/Scot/Scotts_UI/Menus/Continue_WG.Continue_WG=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/Ethan/BPs/Pyramid_Destruct.Pyramid_Destruct;
@@ -2930,6 +2949,8 @@ DestructibleComponent=
 BoolProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 CharacterMovementComponent=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 SubstanceSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.Move Forwards Backwards,InputSettings.Bindings.AxisMappings.Strafe Left Right,InputSettings.Bindings.AxisMappings.Rotate Left RIght,
+HUD_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+Continue_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
@@ -2949,7 +2970,7 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
 ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2964,8 +2985,8 @@ REINST_PlayerCharacter_C_152="\"Object.Character.CharacterMovement.Object.Charac
 REINST_PlayerCharacter_C_160="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 ParticleSystemComponent="\"Object.Lighting.LightingChannels\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
@@ -3034,6 +3055,8 @@ REINST_ENEMY_AI_C_121="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \
 DestructibleComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" "
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
