--- a/Example project/Saved/Config/Windows/Engine.ini
+++ b/Example project/Saved/Config/Windows/Engine.ini
@@ -48,4 +48,12 @@ bUpdateOnRT=True
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
