lock on system in-visually for now

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Craig
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -145,10 +145,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
+OpenAssetsAtExit=/Game/Lennon/Enemy/ENEMY_AI.ENEMY_AI
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=327.000
+ScreenPosition=X=1920.000 Y=327.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -880,26 +882,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scot/Scotts_UI/Menus/Continue_WG
-MRUItem1=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem0=/Game/Klaus/LockOn
+MRUItem1=/Game/Lennon/Enemy/ENEMY_AI
 MRUItem2=/Game/PlayerCharacter
-MRUItem3=/Game/HUD
-MRUItem4=/Game/Ethan/BPs/Ramp
-MRUItem5=/Game/Ethan/BPs/Pyramid
-MRUItem6=/Game/Ethan/BPs/Arch
-MRUItem7=/Game/Ethan/BPs/Pyramid_Destruct
-MRUItem8=/Game/StarterContent/Shapes/Shape_TriPyramid
-MRUItem9=/Game/StarterContent/Shapes/Shape_Wedge_B_DM
-MRUItem10=/Game/StarterContent/Shapes/Shape_Pipe_180_DM
-MRUItem11=/Game/StarterContent/Shapes/Shape_TriPyramid_DM
-MRUItem12=/Game/Arena_obj
-MRUItem13=/Game/Lennon/Enemy/Drone_DM
-MRUItem14=/Game/Lennon/Enemy/Drone
-MRUItem15=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem16=/Game/Ethan/BPs/ObstacleSpawner
-MRUItem17=/Game/MainMenu
-MRUItem18=/Game/Ramp_3
-MRUItem19=/Game/Ramp_2
+MRUItem3=/Game/Scot/Scotts_UI/Menus/Continue_WG
+MRUItem4=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem5=/Game/HUD
+MRUItem6=/Game/Ethan/BPs/Ramp
+MRUItem7=/Game/Ethan/BPs/Pyramid
+MRUItem8=/Game/Ethan/BPs/Arch
+MRUItem9=/Game/Ethan/BPs/Pyramid_Destruct
+MRUItem10=/Game/StarterContent/Shapes/Shape_TriPyramid
+MRUItem11=/Game/StarterContent/Shapes/Shape_Wedge_B_DM
+MRUItem12=/Game/StarterContent/Shapes/Shape_Pipe_180_DM
+MRUItem13=/Game/StarterContent/Shapes/Shape_TriPyramid_DM
+MRUItem14=/Game/Arena_obj
+MRUItem15=/Game/Lennon/Enemy/Drone_DM
+MRUItem16=/Game/Lennon/Enemy/Drone
+MRUItem17=/Game/Ethan/BPs/ObstacleSpawner
+MRUItem18=/Game/MainMenu
+MRUItem19=/Game/Ramp_3
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -2785,6 +2787,12 @@ Widget.Render Transform=True
 Widget.Performance=True
 Widget.Clipping=True
 Widget.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=0
@@ -2825,6 +2833,7 @@ Widget.Navigation=True
 /Game/Ethan/BPs/Pyramid.Pyramid=1
 /Game/Ethan/BPs/Ramp.Ramp=1
 /Game/Scot/Scotts_UI/Menus/Continue_WG.Continue_WG=1
+/Game/Klaus/LockOn.LockOn=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Ethan/BPs/Pyramid_Destruct.Pyramid_Destruct;
@@ -2849,7 +2858,7 @@ RecentlyPlaced=/Game/Lennon/Enemy/enemycharacter.enemycharacter;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=LoadErrors
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2953,7 +2962,7 @@ Continue_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENE
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object=
+Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -2966,11 +2975,11 @@ AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" "
 IOSRuntimeSettings=
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent=
-ActorComponent=
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
