compass half working

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,12 +145,10 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Lennon/Enemy/ENEMY_AI.ENEMY_AI
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=1920.000 Y=327.000
+ScreenPosition=X=315.000 Y=155.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -790,7 +788,7 @@ LandscapeEditor.TimeStamp=2020.02.15-17.22.26
 LandscapeEditor.LastCompileMethod=External
 FoliageEdit.TimeStamp=2020.02.15-17.22.23
 FoliageEdit.LastCompileMethod=External
-MeshBuilder.TimeStamp=2020.02.04-16.46.29
+MeshBuilder.TimeStamp=2020.02.15-17.22.28
 MeshBuilder.LastCompileMethod=External
 StatsViewer.TimeStamp=2020.02.15-17.22.36
 StatsViewer.LastCompileMethod=External
