--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,7 +142,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Craig
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -151,9 +151,6 @@ LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Lennon/Enemy/ENEMY_AI.ENEMY_AI
-OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Ethan/BPs/EnemyBullet.EnemyBullet
 
 [RootWindow]
 ScreenPosition=X=315.000 Y=155.000
@@ -174,7 +171,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/mosne/Desktop/game jam/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
+UNR=../../../../../../Users/Craig/Documents/GitHub/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
 BRUSH=D:/UnrealProjects/MyProject2/Content/
 FBX=D:/UnrealProjects/MyProject2/Content/
 FBXAnim=D:/UnrealProjects/MyProject2/Content/
@@ -846,7 +843,7 @@ ImmediatePhysicsEditor.TimeStamp=2018.09.17-07.43.03
 ImmediatePhysicsEditor.LastCompileMethod=Unknown
 HardwareSurvey.TimeStamp=2018.09.17-07.34.40
 HardwareSurvey.LastCompileMethod=Unknown
-ExternalImagePicker.TimeStamp=2020.02.04-16.46.24
+ExternalImagePicker.TimeStamp=2020.02.15-17.22.23
 ExternalImagePicker.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2020.02.04-16.46.38
 StaticMeshEditor.LastCompileMethod=External
@@ -854,7 +851,7 @@ HierarchicalLODUtilities.TimeStamp=2020.02.04-16.46.25
 HierarchicalLODUtilities.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2020.02.04-16.46.31
 NewLevelDialog.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2020.02.04-16.46.18
+BlueprintGraph.TimeStamp=2020.02.15-17.22.17
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2019.06.21-09.11.06
 SequencerWidgets.LastCompileMethod=Unknown
@@ -870,6 +867,8 @@ SubstanceSource.TimeStamp=2020.03.12-17.20.26
 SubstanceSource.LastCompileMethod=External
 SubstanceLiveLink.TimeStamp=2020.03.12-17.20.26
 SubstanceLiveLink.LastCompileMethod=External
+TextureEditor.TimeStamp=2020.02.15-17.22.36
+TextureEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -888,26 +887,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Ethan/BPs/EnemyBullet
-MRUItem1=/Game/Ethan/BPs/Missile
-MRUItem2=/Game/Prototype/Arena
-MRUItem3=/Game/NextLevel
-MRUItem4=/Game/Lennon/Enemy/ENEMY_AI
-MRUItem5=/Game/PlayerCharacter
-MRUItem6=/Game/Arena2
-MRUItem7=/Game/Blueprints/NewPawn
-MRUItem8=/Game/Hasiel/NewMap
-MRUItem9=/Game/StarterContent/Maps/StarterMap
-MRUItem10=/Game/MainMenu
-MRUItem11=/Game/Klaus/LockOn
-MRUItem12=/Game/Lennon/Enemy/enemyAI
-MRUItem13=/Game/Scot/Scotts_UI/Menus/Continue_WG
-MRUItem14=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem15=/Game/HUD
-MRUItem16=/Game/Ethan/BPs/Ramp
-MRUItem17=/Game/Ethan/BPs/Pyramid
-MRUItem18=/Game/Ethan/BPs/Arch
-MRUItem19=/Game/Ethan/BPs/Pyramid_Destruct
+MRUItem0=/Game/Craig/radarHUD
+MRUItem1=/Game/Craig/RadarComponent
+MRUItem2=/Game/Scot/Scotts_UI/Test_GM
+MRUItem3=/Game/Craig/radarTestGameMode
+MRUItem4=/Game/Scot/Scotts_UI/UI_Assets/Compass
+MRUItem5=/Game/Ethan/BPs/EnemyBullet
+MRUItem6=/Game/Ethan/BPs/Missile
+MRUItem7=/Game/Prototype/Arena
+MRUItem8=/Game/NextLevel
+MRUItem9=/Game/Lennon/Enemy/ENEMY_AI
+MRUItem10=/Game/PlayerCharacter
+MRUItem11=/Game/Arena2
+MRUItem12=/Game/Blueprints/NewPawn
+MRUItem13=/Game/Hasiel/NewMap
+MRUItem14=/Game/StarterContent/Maps/StarterMap
+MRUItem15=/Game/MainMenu
+MRUItem16=/Game/Klaus/LockOn
+MRUItem17=/Game/Lennon/Enemy/enemyAI
+MRUItem18=/Game/Scot/Scotts_UI/Menus/Continue_WG
+MRUItem19=/Game/Scot/Scotts_UI/HUD_WG
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -2901,6 +2900,33 @@ CharacterMovementComponent.NavMovement=True
 CharacterMovementComponent.Collision=True
 REINST_ENEMY_AI_C_950.Navigation=True
 REINST_ENEMY_AI_C_950.Collision=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+radarHUD_C.Tick=True
+radarHUD_C.HUD=True
+radarTestGameMode_C.Tick=True
+radarTestGameMode_C.Classes=True
+radarTestGameMode_C.Game=True
+radarTestGameMode_C.GameMode=True
+RadarComponent_C.ComponentTick=True
+RadarComponent_C.Tags=True
+RadarComponent_C.ComponentReplication=True
+RadarComponent_C.Activation=True
+RadarComponent_C.Variable=True
+RadarComponent_C.Cooking=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
+radarHUD_C.Default=True
+Test_GM_C.Tick=True
+Test_GM_C.Classes=True
+Test_GM_C.Game=True
+Test_GM_C.GameMode=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=0
@@ -2945,6 +2971,11 @@ REINST_ENEMY_AI_C_950.Collision=True
 /Game/Blueprints/NewPawn.NewPawn=0
 /Game/Ethan/BPs/Missile.Missile=0
 /Game/Ethan/BPs/EnemyBullet.EnemyBullet=0
+/Game/Scot/Scotts_UI/UI_Assets/Compass.Compass=1
+/Game/Craig/radarHUD.radarHUD=1
+/Game/Craig/radarTestGameMode.radarTestGameMode=1
+/Game/Craig/RadarComponent.RadarComponent=1
+/Game/Scot/Scotts_UI/Test_GM.Test_GM=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -3058,7 +3089,7 @@ K2Node_VariableGet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LO
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 PlayerCharacter_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
-K2Node_VariableSet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+K2Node_VariableSet=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.Collision.Collision,
 FloatProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 IntProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
@@ -3074,8 +3105,11 @@ HUD_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI
 Continue_WG_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
 SphereComponent=SphereComponent.Collision.Collision,
 ObjectProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
-ArrayProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,
+ArrayProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
+radarHUD_C=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
+StructProperty=ENEMY_AI_C.Rendering.TextureStreaming,ENEMY_AI_C.Rendering.LOD,ENEMY_AI_C.Physics.ConstraintsGroup,ENEMY_AI_C.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
@@ -3096,7 +3130,7 @@ StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Render
 MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
