--- a/Example project/Config/DefaultInput.ini
+++ b/Example project/Config/DefaultInput.ini
@@ -69,6 +69,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Strafe Left Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Strafe Left Right",Scale=-1.000000,Key=Gamepad_LeftStick_Left)
 +AxisMappings=(AxisName="Strafe Left Right",Scale=1.000000,Key=Gamepad_LeftStick_Right)
++AxisMappings=(AxisName="Rotate Left RIght",Scale=-0.400000,Key=Q)
++AxisMappings=(AxisName="Rotate Left RIght",Scale=0.400000,Key=E)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
